# retailsynth

./: .coveragerc  .gitignore  CODEOWNERS  LICENSE  README.md  mypy.ini  pyproject.toml
analysis_workflow/1_complete_journey_eda/: 1_preprocess_analysis.ipynb  1_preprocess_analysis.md
analysis_workflow/1_complete_journey_eda/cfg/: real_dataset.yaml
analysis_workflow/2_synthesizer_calibration/: 1_prepare_real_data.py  2_parameter_sweeping.py  synthesizer_validation.ipynb  synthesizer_validation.md
analysis_workflow/2_synthesizer_calibration/calib_utils/: plot_discounts.py  plot_elasticity.py  plot_purchases.py  plot_utils.py
analysis_workflow/2_synthesizer_calibration/cfg/: parameter_sweeping.yaml  real_dataset.yaml  synthetic_dataset.yaml
analysis_workflow/2_synthesizer_calibration/cfg/synthetic_data/: synthetic_data_params.yaml
analysis_workflow/3_scenario_analysis/: pricing_strategy_visualization.ipynb  pricing_strategy_visualization.md  run_scenarios.py
analysis_workflow/3_scenario_analysis/cfg/: scenario_analysis.yaml  synthetic_dataset.yaml
analysis_workflow/3_scenario_analysis/cfg/synthetic_data/: synthetic_data_params.yaml
analysis_workflow/3_scenario_analysis/scenario_utils/: plot_aggregated_stats.py  segment_analysis.py
analysis_workflow/4_model_fitting/: model_fitting.ipynb
analysis_workflow/4_model_fitting/cfg/: synthetic_dataset.yaml
analysis_workflow/4_model_fitting/cfg/synthetic_data/: synthetic_data_params.yaml
src/retailsynth/: __init__.py  base_config.py
src/retailsynth/datasets/: dataclass.py
src/retailsynth/datasets/complete_journey/: config.py  data_schemas.py  dataclass.py  dataloaders.py  preprocess_pipeline.py  preprocess_utils.py  product_analysis.py
src/retailsynth/feature_eng/: feature_generator.py  feature_loader.py  feature_pipeline.py  feature_utils.py  indices.py  response_tracker.py  viz_data_layer.py
src/retailsynth/feature_eng/features/: __init__.py  features_avg.py  features_base.py  features_cumulative.py  features_lag.py  features_last.py  features_time.py
src/retailsynth/model/: MaskHandlerExample.ipynb  MaskHandlerExample.md  model.py
src/retailsynth/synthesizer/: config.py  data_synthesizer.py  synthesizer_pipeline.py
src/retailsynth/utils/: dataset_viz.py  storage.py
tests/: conftest.py
tests/cfg/: indiv_env_small_dataset.yaml
tests/cfg/synthetic_data/: synthetic_data.yaml
tests/datasets/: input_dataclass_test.py  preprocess_test.py
tests/feature_eng/: feature_generator_test.py  features_average_test.py  features_test.py  indices_test.py  response_tracker_test.py  serialization_test.py  utils_feature_store_test.py
tests/fixtures/: data_layer_fixtures_test.py  feature_fixtures_test.py  preprocess_fixtures_test.py
tests/synthesizer/: data_synthesizer_test.py
